@@ -51,6 +51,7 @@ Version 2.0.0 - SVN
  - Add DOMJUDGE_ADMINS variable in etc/passwords.php. This can be used
    to differentiate between judges and admins for the web interface:
    admins will be allowed to change more of the core data.
+ - Bring lib.database.php up to date with latest upstream version.
 
 Version 1.3.0 - 6 October 2006
 ------------------------------
